Start of first round of speakers

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -141,50 +141,52 @@
                 <h1>Keynote Speakers</h1>
                 <p class="subheader">We have the brightest in the industry to deliver opening and closing keynotes on both days.</p>
         	</div>
-          <div class="col-sm-6 col-md-3">
+          <div class="speaker col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
+              <a href="/speakers/russ-cox"><img src="/images/speakers/russ-cox.png" alt="Russ Cox"></a>
             <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
+                <h4><a href="/speakers/russ-cox">Russ Cox</a></h4>
+                <p>Engineer at Google</p>
+                <p>Russ Cox has worked on the Go programming language at Google since 2008.</p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
+                  <a href="http://twitter.com/_rsc">@_rsc</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="speaker col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
+            <a href="/speakers/robert-griesemer"><img src="/images/speakers/robert-griesemer.png" alt="Robert Griesemer"></a>
             <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
+                <h4><a href="/speakers/robert-griesemer">Robert Griesemer</a></h4>
+                <p>Engineer at Google</p>
+                <p>Robert Griesemer is a software engineer at Google, and one of the designers of the Go language.</p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="speaker col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
+            <a href="/speakers/dmitry-vyukov"><img src="/images/speakers/dmitry-vyukov.jpg" alt="Dmitry Vyukov"></a>
             <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
+                <h4><a href="/speakers/dmitry-vyukov">Dmitry Vyukov</a></h4>
+                <p>Engineer at Google</p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
+                  <a href="http://twitter.com/dvyukov">@dvyukov</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="speaker col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
+            <a href="/speakers/andrew-gerrand"><img src="/images/speakers/andrew-gerrand.jpg" alt="Andrew Gerrand"></a>
             <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
+                <h4><a href="/speakers/andrew-gerrand">Andrew Gerrand</a></h4>
+                <p>Engineer at Google</p>
+                <p>Andrew Gerrand works on the Go Programming Language at Google Sydney.</p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
+                  <a href="http://twitter.com/ennef">@ennef</a>
                 </div>
               </div>
             </div>
@@ -198,218 +200,200 @@
                 <p class="subheader">&nbsp;</p>
         	</div>
 
-          <div class="col-sm-3 col-md-2">
+          <div class="speaker col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
+              <a href="/speakers/baishampayan-ghose"><img src="/images/speakers/baishampayan-ghose.jpg" alt="Baishampayan Ghose"></a>
+              <div class="caption">
+                <h4><a href="/speakers/baishampayan-ghose">Baishampayan Ghose</a></h4>
+                <p>Co-founder at Helpshift</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker col-sm-3 col-md-2">
+            <div class="thumbnail">
+              <a href="/speakers/ben-johnson"><img src="/images/speakers/ben-johnson.jpg" alt="Ben Johnson"></a>
+              <div class="caption">
+                <h4><a href="/speakers/ben-johnson">Ben Johnson</a></h4>
+                <p>Open source Go developer specializing in databases and distributed systems.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker col-sm-3 col-md-2">
+            <div class="thumbnail">
+              <a href="/speakers/derek-parker"><img src="/images/speakers/derek-parker.jpg" alt="Derek Parker"></a>
+              <div class="caption">
+                <h4><a href="/speakers/derek-parker">Derek Parker</a></h4>
+                <p>Author of <a href="https://github.com/derekparker/delve">Delve</a></p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker col-sm-3 col-md-2">
+            <div class="thumbnail">
+              <a href="/speakers/hana-kim"><img src="/images/speakers/hana-kim.png" alt="Hana Kim"></a>
+              <div class="caption">
+                <h4><a href="/speakers/hana-kim">Hana Kim</a></h4>
+                <p>Hana is a software engineer on the Go team at Google.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker col-sm-3 col-md-2">
+            <div class="thumbnail">
+            <a href="/speakers/peter-bourgon"><img src="/images/speakers/peter-bourgon.jpg" alt="Peter Bourgon"></a>
             <div class="caption">
-                <h4>To Be Announced</h4>
+                <h4><a href="/speakers/peter-bourgon">Peter Bourgon</a></h4>
+                <p>Engineer at SoundCloud</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="speaker col-sm-3 col-md-2">
+            <div class="thumbnail">
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
+              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
+              <div class="caption">
+                <h4><a href="/speakers">To Be Announced</a></h4>
                 <p></p>
                 <div class="handle">
-                  <a href="#">@speaker</i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-2">
-            <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
-                <div class="handle">
-                  <a href="#">@speaker</i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-2">
-            <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
-                <div class="handle">
-                  <a href="#">@speaker</i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-2">
-            <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
-                <div class="handle">
-                  <a href="#">@speaker</i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-2">
-            <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
-                <div class="handle">
-                  <a href="#">@speaker</i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-2">
-            <div class="thumbnail">
-            <img src="/images/gopher-placeholder.png" alt="...">
-            <div class="caption">
-                <h4>To Be Announced</h4>
-                <p></p>
-                <div class="handle">
-                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
