--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -39,7 +39,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/#workshop-schedule">Workshops</a></li>
             <li><a href="/#keynotes">Keynotes</a></li>
-            <li><a href="/#speakers">Speakers</a></li>
+            <li><a href="/speakers">Speakers</a></li>
           </ul>
         </li>
         <li class="dropdown">
