--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -100,6 +100,20 @@ small {
   padding-right: 5px;
 }
 
+#keynotes .container>div.speaker {
+  height: 450px;
+}
+
+#speakers .container>div.speaker {
+  height: 350px;
+  margin-bottom: 25px;
+}
+
+#keynotes .container>div.speaker .thumbnail, #speakers .container>div.speaker .thumbnail {
+  height: 100%;
+  min-height: 100%;
+}
+
 .thumbnail {
   border: 1px solid #efefef;
 }
