Fixed responsive styles for the keynote and regular speakers list on the home page / small responsive style bug with the event date boxes

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -200,7 +200,7 @@
                 <p class="subheader">&nbsp;</p>
         	</div>
 
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers/baishampayan-ghose"><img src="/images/speakers/baishampayan-ghose.jpg" alt="Baishampayan Ghose"></a>
               <div class="caption">
@@ -211,40 +211,40 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers/ben-johnson"><img src="/images/speakers/ben-johnson.jpg" alt="Ben Johnson"></a>
               <div class="caption">
                 <h4><a href="/speakers/ben-johnson">Ben Johnson</a></h4>
-                <p>Open source Go developer specializing in databases and distributed systems.</p>
+                <p>Open source Go developer in databases & distributed systems.</p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers/derek-parker"><img src="/images/speakers/derek-parker.jpg" alt="Derek Parker"></a>
               <div class="caption">
                 <h4><a href="/speakers/derek-parker">Derek Parker</a></h4>
-                <p>Author of <a href="https://github.com/derekparker/delve">Delve</a></p>
+                <p>Author of <a href="https://github.com/derekparker/delve">Delve</a> an open source debugger for Go</p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers/hana-kim"><img src="/images/speakers/hana-kim.png" alt="Hana Kim"></a>
               <div class="caption">
                 <h4><a href="/speakers/hana-kim">Hana Kim</a></h4>
-                <p>Hana is a software engineer on the Go team at Google.</p>
+                <p>Software engineer on the Go team at Google.</p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
             <a href="/speakers/peter-bourgon"><img src="/images/speakers/peter-bourgon.jpg" alt="Peter Bourgon"></a>
             <div class="caption">
@@ -255,7 +255,7 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-sm-3 col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -266,7 +266,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -277,7 +277,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -288,7 +288,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -299,7 +299,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -310,7 +310,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -321,7 +321,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -332,7 +332,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -343,7 +343,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -354,7 +354,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -365,7 +365,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -376,7 +376,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
@@ -387,7 +387,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-md-2">
+          <div class="col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
